refactor(#4): get rid of c-style casts, remove unused code

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -242,6 +242,7 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         version: ${{ needs.prepare_new_version.outputs.version }}
+        pre_release: "alpha"
 
     - uses: actions/download-artifact@v7
       with:
