--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,7 +131,7 @@ jobs:
         ninja: ${{ contains(matrix.generator, 'Ninja' )}}
         vcpkg: false
         ccache: true
-        clangtidy: ${{ contains(matrix.cpp_compiler, 'clang' )}}
+        clangtidy: ${{ contains(matrix.cpp_compiler, 'clang') && env.CLANG_TIDY_VERSION || '' }}
 
         cppcheck: ${{ !contains(matrix.cpp_compiler, 'clang' )}}
 
