--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,6 @@ on:
 
 env:
   CLANG_COMPILER: "clang++"
-  CLANG_TIDY_VERSION: "19.1.1"
 
 jobs:
   prepare_new_version:
@@ -131,7 +130,7 @@ jobs:
         ninja: ${{ contains(matrix.generator, 'Ninja' )}}
         vcpkg: false
         ccache: true
-        clangtidy: ${{ contains(matrix.cpp_compiler, 'clang') && env.CLANG_TIDY_VERSION || '' }}
+        clangtidy: ${{ contains(matrix.cpp_compiler, 'clang') }}
 
         cppcheck: ${{ !contains(matrix.cpp_compiler, 'clang' )}}
 
