refactor(#4): fix warning
* refactor(#4): get rid of c-style casts, remove unused code

* refactor(#4): fix fuzz tests

* refactor(#4): fix warning

* refactor(#4): fix static analysis

* refactor(#4): fix clang-tidy errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,6 @@ on:
 
 env:
   CLANG_COMPILER: "clang++"
-  CLANG_TIDY_VERSION: "19.1.1"
 
 jobs:
   prepare_new_version:
@@ -131,7 +130,7 @@ jobs:
         ninja: ${{ contains(matrix.generator, 'Ninja' )}}
         vcpkg: false
         ccache: true
-        clangtidy: ${{ contains(matrix.cpp_compiler, 'clang' )}}
+        clangtidy: ${{ contains(matrix.cpp_compiler, 'clang') }}
 
         cppcheck: ${{ !contains(matrix.cpp_compiler, 'clang' )}}
 
@@ -242,6 +241,7 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         version: ${{ needs.prepare_new_version.outputs.version }}
+        pre_release: "alpha"
 
     - uses: actions/download-artifact@v7
       with:
