--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,6 +133,8 @@ install(
   TARGETS ${INSTALL_TARGETS}
   DESTINATION lib
   EXPORT ${PROJECT_NAME}Targets
+  INCLUDES
+  DESTINATION include/${PROJECT_NAME}
 )
 install(DIRECTORY include/${PROJECT_NAME} DESTINATION include)
 
