--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,8 +139,8 @@ jobs:
         gcovr: ${{ contains(matrix.os, 'ubuntu') && matrix.build_type == 'Debug'}}
         opencppcoverage: ${{ contains(matrix.os, 'windows') && matrix.build_type == 'Debug'}}
 
-        doxygen: true
-        graphviz: true
+        doxygen: ${{ matrix.cpp_compiler == env.CLANG_COMPILER && matrix.build_type == 'Release' }}
+        graphviz: ${{ matrix.cpp_compiler == env.CLANG_COMPILER && matrix.build_type == 'Release' }}
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -154,7 +154,7 @@ jobs:
         -D${{ env.PROJECT_NAME }}_BUILD_TESTS=ON
         -D${{ env.PROJECT_NAME }}_ENABLE_COVERAGE:BOOL=${{ matrix.build_type == 'Debug' }}
         -D${{ env.PROJECT_NAME }}_BUILD_FUZZ_TESTS:BOOL=${{ matrix.cpp_compiler == env.CLANG_COMPILER && matrix.build_type == 'Debug' }}
-        -D${{ env.PROJECT_NAME }}_DOC=ON
+        -D${{ env.PROJECT_NAME }}_DOC=${{ matrix.cpp_compiler == env.CLANG_COMPILER && matrix.build_type == 'Release' }}
         -S ${{ github.workspace }}
 
     - name: Build
@@ -229,17 +229,13 @@ jobs:
       with:
         name: "package-${{matrix.os}}-${{matrix.cpp_compiler}}-${{matrix.generator}}"
         path: build/*-Release-*.*
-    # deploy docs to pages
-    - name: Setup Pages
-      uses: actions/configure-pages@v5
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v3
+
+    - name: Deploy Pages
+      if: ${{ matrix.cpp_compiler == env.CLANG_COMPILER && matrix.build_type == 'Release' }}
+      uses: ./.github/pages
       with:
-        # Upload entire repository
-        path: './build/doc'
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
+        path: './build/doc/html'
+        artifact_name: "docs-${{matrix.os}}-${{matrix.cpp_compiler}}-${{matrix.generator}}"
 
   tag_and_release:
     name: Tag and release
